--- a/simple_notification/pubspec.yaml
+++ b/simple_notification/pubspec.yaml
@@ -9,6 +9,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^16.3.2
+  http: ^1.2.0
+  provider: ^6.1.2
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
