--- a/simple_notification/pubspec.yaml
+++ b/simple_notification/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_local_notifications: ^16.3.2
   http: ^1.2.0
+  path_provider: ^2.1.2
   provider: ^6.1.2
   rxdart: ^0.27.7
 
