--- a/dicoding_chatting/pubspec.yaml
+++ b/dicoding_chatting/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.15.7
   firebase_auth: ^4.17.7
   firebase_core: ^2.26.0
   flutter:
